<resources>
    <string name="app_name">Foodies</string>
    <string name="facebook_app_id">258323055264688</string>
    <string name="fb_login_protocol_scheme">fb258323055264688</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Favorite">Favorite</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="terfavorit">Terfavorit</string>
    <string name="terdekat">Terdekat</string>
    <string name="_24_jam">24 Jam</string>
    <string name="cart">Cart</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_place_update">Map</string>

    <string-array name="kategori">
        <item>Jajanan</item>
        <item>Minuman</item>
        <item>Ayam dan Bebek</item>
        <item>Cepat Saji</item>
    </string-array>

    <string-array name="camera">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

</resources>
