<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edt_search"
            android:layout_width="240dp"
            android:background="@drawable/search_box_background"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_search_grey"
            android:drawablePadding="10dp"
            android:hint="Cari di Foodies"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:inputType="none"
            android:cursorVisible="false"
            android:textIsSelectable="false"
            android:focusable="false"
            android:focusedByDefault="false"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="parallax" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_terdekat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_place"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="@string/terdekat"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_terfavorit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_favorite"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="@string/terfavorit"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_promosi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_diskon"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="Promosi"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_24_jam"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_all_days"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="@string/_24_jam"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_murah"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_murah"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="Murah"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_terlaris"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:drawableTop="@drawable/icons_terlaris"
                            android:drawablePadding="5dp"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:text="Terlaris"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_jajanan"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/box_card_red"
                        android:gravity="center"
                        android:text="Jajanan"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_minuman"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:background="@drawable/box_card_blue"
                        android:text="Minuman"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_ayam"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:background="@drawable/box_card_orange"
                        android:text="Ayam dan Bebek"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_cepat_saji"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:background="@drawable/box_card_yellow"
                        android:text="Cepat Saji"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:textSize="18sp" />



                </LinearLayout>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_produk_beranda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:listitem="@layout/item_produk_beranda"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Promosi"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_produk_promosi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_produk_beranda"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>